Docs: add PCB + enclosure top-off images to README

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ build_flags =
   -Wall
   -Wextra
   -DCONFIG_IDF_TARGET_ESP32C3=1
+  -DSAFE_I2C_CABLE=1
   -DWIFI_DIAG=0
   -DWIFI_PORTAL_DIAG_ONLY=0
   -DWIFI_AP_OPEN_TEST=0
